# neo4j-parallel-rust-loader

./: Cargo.toml  README.md
benches/: loader_bench.rs
src/: config.rs  lib.rs  loader.rs  main.rs  neo4j.rs
tests/: integration_test.rs
