[package]
name = "neo4j-parallel-rust-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
neo4rs = { version = "0.9.0-rc.6", features = ["json"] }
dotenvy = "0.15"
futures = "0.3"
parquet = { version = "55.2", features = ["arrow", "json"] }
arrow = "55.2"

[dev-dependencies]

criterion = "0.5"
rand = "0.8"

